# Rudi---Wallet

./: Cargo.toml  PROPOSAL.md  README.md
.github/workflows/: ci.yml
frontend/: index.html  main.js  package.json  tailwing.config.js
src/: ethereum.rs  history.rs  lib.rs  main.rs  making_tx.rs  session.rs  solana.rs  storage.rs  transaction.rs  types.rs  wallet.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/builders/: mod.rs  password.rs  storage.rs  wallet.rs
src/helpers/: making_tx.rs  mod.rs  types.rs
src/keystore.rs/: password_handler.rs
src/networks/: ethereum_network.rs  mod.rs  solana_network.rs
src/networks/btc/: bitcoin_network.rs  mod.rs  transaction.rs
src/tea/: mod.rs  model.rs  update.rs  view.rs
src/tokens/: bitcoin.rs  ethereum.rs  mod.rs  solana.rs
