[package]
name = "rust-project-rudi"
version = "0.1.0"
edition = "2024"

[dependencies]

bip39 = "2.0"
rand = "0.8"
anyhow = "1.0.47"

aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bitcoin = { version = "0.31", features = ["rand-std"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }