[package]
name = "rust-project-rudi"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wallet & keys
bip39 = "2.0"
rand = "0.8"

# Encryption & hashing
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"

# Bitcoin
bitcoin = { version = "0.31", features = ["rand-std"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Solana
solana-client = "1.18"
solana-sdk = "1.18"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Error handling
anyhow = "1.0"