[package]
name = "rust-project-rudi"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wallet & keys
bip39 = "2.0"
rand = "0.8"

# Encryption & hashing
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"
bs58 = "0.5"

# Bitcoin
bitcoin = { version = "0.31", features = ["rand-std"] }

# Solana (lightweight — no solana-sdk/solana-client)
ed25519-dalek = "2.1"

# HTTP (handles Solana RPC calls manually)
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Ethereum - Alloy 1.0
alloy = { version = "1.0", features = ["full"] }