[package]
name = "app"
version = "0.1.0"
description = "RuDi Wallet"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", default-features = false, features = ["wry"] }
tauri-plugin-log = { version = "2", features = [] }
bitcoin = { version = "0.31", features = ["rand-std"] }


rust-project-rudi = { path = ".." }
